--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
     <string name="app_name">InBus</string>
-    <string name="button_connect">Conectar</string>
+    <string name="button_connect">Haz click para conectar</string>
     <string name="button_goback">Volver</string>
     <string name="button_signal">Enviar señal</string>
     <string name="textView2">Bienvenido a InBus</string>
     <string name="button_test">Versión Prueba</string>
     <string name="button_app">Versión Final</string>
+    <string name="query_micro">Recorrido</string>
+    <string name="text_query">Ingrese el recorrido: </string>
+    <string name="button_gorecorrido">Ok</string>
+
 </resources>
